--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Maze Solver - DFS & BFS</title>
+    <title>Maze Solver - DFS & BFS</title>i
     <!-- Optional: Load a Google Font for a modern look -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
